# personal_project_template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
